<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.juanmacapuano.appmapeo.ProjectListViewModel" />

        <variable
            name="itemFragment"
            type="com.juanmacapuano.appmapeo.ProjectItemFragment" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProjectItemFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/project_item_min_height"
        android:orientation="horizontal"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="386dp"
            android:layout_height="724dp"
            android:layout_marginStart="@dimen/item_horizontal_margin"
            android:layout_marginEnd="@dimen/item_horizontal_margin"
            android:padding="@dimen/item_horizontal_margin">

            <EditText
                android:id="@+id/et_item_project_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/item_project_title"
                android:inputType="textPersonName"
                android:text="@={viewModel.et_item_project_title}"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/et_item_project_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Arroyo Seco" />

            <EditText
                android:id="@+id/et_item_project_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/item_project_date"
                android:inputType="textPersonName"
                android:text="@={viewModel.et_item_project_date}"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="12/12/12" />

            <EditText
                android:id="@+id/et_item_project_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_item_project_title"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/item_horizontal_margin"
                android:layout_marginEnd="8dp"
                android:hint="@string/item_project_location"
                android:inputType="textPersonName"
                android:text="@={viewModel.et_item_project_location}"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_item_project_title"
                tools:text="Sitio Arqueológico" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_item_project_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:onClick="@{()->itemFragment.insertProject()}"
                android:text="@string/item_project_btn_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_item_project_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>