<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.juanmacapuano.appmapeo.ProjectListViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProjectItemFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_horizontal_margin"
        android:minHeight="@dimen/project_item_min_height"
        android:orientation="horizontal"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <RelativeLayout
            android:layout_marginStart="@dimen/item_horizontal_margin"
            android:layout_marginEnd="@dimen/item_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/item_horizontal_margin">

            <EditText
                android:id="@+id/tv_item_project_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@={viewModel.tv_item_project_title}"
                android:textSize="18sp"
                android:hint="@string/item_project_title"
                android:inputType="textPersonName"
                android:textStyle="bold"
                tools:text="Arroyo Seco" />

            <EditText
                android:id="@+id/tv_item_project_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@={viewModel.tv_item_project_date}"
                android:textSize="18sp"
                android:hint="@string/item_project_date"
                android:inputType="textPersonName"
                android:textStyle="bold"
                tools:text="12/12/12" />

            <EditText
                android:id="@+id/tv_item_project_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_item_project_title"
                android:layout_marginTop="@dimen/item_horizontal_margin"
                android:text="@={viewModel.tv_item_project_location}"
                android:textSize="18sp"
                android:hint="@string/item_project_location"
                android:inputType="textPersonName"
                android:textStyle="bold"
                tools:text="Sitio Arqueológico" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>